# Fractale

./: .gitignore  .indent.pro  CMakeLists.txt  Makefile  Makefile.old  README.md  cmake_debug.sh  cmake_release.sh  fragment.fsh  index.md
.config/: .valgrind.supp
.config_old/report/: Makefile
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile
inc/: FractalWindow.hpp  FractalWindowOGL.hpp  FractaleGLWidget.hpp  FractaleWindow.hpp  Main.hpp  MainWindow.hpp  testglwidget.hpp
report/: CMakeLists.txt  Report.tex
shaders/: fragmentShaderJulia.fsh  fragmentShaderMandelbrot.fsh  vertexShader.vsh
src/: CMakeLists.txt  FractalWindow.cpp  FractalWindowOGL.cpp  FractaleGLWidget.cpp  FractaleWindow.cpp  Main.cpp  MainWindow.cpp  Makefile  main.cpp  testglwidget.cpp
src/Qt/Fractal/OpenGL/: FractalWindowOGL.cpp  FractalWindowOGL.hpp
src/Shaders/: fragmentShaderJulia.fsh  vertexShader.vsh
src/main/Qt/: MainWindow.cpp  MainWindow.hpp
src/main/Qt/Fractal/: FractalWindow.cpp
